Borrow executor and waker from executor and woke.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,11 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+woke = { path = "../woke" }
+spin = "0.5"
+smallvec = "1.0.0"
+globals = "1.0.0"
+
+[dependencies.lazy_static]
+version = "1.4.0"
+features = ["spin_no_std"]
