Prepare for release, better docs.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,22 @@
 [package]
 name = "pasts"
-version = "0.1.0"
+version = "0.0.1"
 authors = ["Jeron Aldaron Lau <jeronlau@plopgrizzly.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+license = "MIT / BSL-1.0"
+description = "Minimal and simpler alternative to the futures crate."
+documentation = "https://docs.rs/pasts"
+repository = "https://github.com/lordaldaron/pasts"
+readme = "README.md"
+keywords = ["futures", "platform-agnostic", "cross-platform", "io", "interrupt"]
+categories = ["asynchronous", "embedded", "no-std", "rust-patterns"]
+
+[badges]
+travis-ci = { repository = "lordaldaron/pasts" }
+is-it-maintained-issue-resolution = { repository = "lordaldaron/pasts" }
+is-it-maintained-open-issues = { repository = "lordaldaron/pasts" }
+maintenance = { status = "actively-developed" }
 
 [dependencies]
 
