Use crate template.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,32 +2,20 @@ language: rust
 sudo: false
 
 cache: cargo
-cache:
-    directories:
-      - $HOME/.cargo
-      - $HOME/target
-
-before-cache:
-  - rm -rf $HOME/.cargo/registry
-
-rust:
-  - beta
-  - nightly
 
 matrix:
-    allow_failures:
-      - rust: nightly
     fast_finish: true
     include:
       - os: linux
-        rust: stable
+        rust: nightly
         compiler: gcc
 
       - os: windows
-        rust: stable
+        rust: nightly
 
       - os: osx
-        rust: stable
+        rust: nightly
 
 script:
-  - cargo test --all
+  - cargo update
+  - cargo test --all --all-features
