--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,4 @@
-/target
-**/*.rs.bk
-
-
-#Added by cargo
-#
-#already existing elements are commented out
-
-#/target
-#**/*.rs.bk
-Cargo.lock
+/target/
+/.cargo-ok
+/Cargo.lock
+/**/*.rs.bk
