--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,31 @@ is-it-maintained-issue-resolution = { repository = "AldaronLau/pasts" }
 is-it-maintained-open-issues = { repository = "AldaronLau/pasts" }
 maintenance = { status = "actively-developed" }
 
+[[example]]
+name = "counter"
+path = "examples/counter.rs"
+required-features = ["std"]
+
+[[example]]
+name = "join"
+path = "examples/join.rs"
+required-features = ["std"]
+
+[[example]]
+name = "time"
+path = "examples/timer.rs"
+required-features = ["std"]
+
+[[example]]
+name = "executor"
+path = "examples/executor.rs"
+required-features = ["std"]
+
+[[test]]
+name = "join"
+path = "tests/join.rs"
+required-features = ["std"]
+
 [dependencies]
 
 [build-dependencies]
