Turn on email in travis config.

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,6 @@ script:
   - cargo update
   - cargo test --all --no-default-features
   - cargo test --all --all-features
+
+notifications:
+  email: true
