--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@
 
 [package]
 name = "pasts"
-version = "0.3.0"
+version = "0.4.0"
 authors = ["Jeron Aldaron Lau <jeronlau@plopgrizzly.com>"]
 license = "Apache-2.0 OR Zlib"
 
@@ -18,7 +18,7 @@ repository = "https://github.com/AldaronLau/pasts"
 documentation = "https://docs.rs/pasts"
 homepage = "https://github.com/AldaronLau/pasts/blob/master/CHANGELOG.md"
 include = ["Cargo.toml", "README.md", "LICENSE-ZLIB", "LICENSE-APACHE", "src/*"]
-keywords = ["futures", "platform-agnostic", "cross-platform", "io", "interrupt"]
+keywords = ["futures", "platform-agnostic", "cross-platform", "io", "executor"]
 categories = ["asynchronous", "embedded", "no-std", "rust-patterns"]
 readme = "README.md"
 edition = "2018"
@@ -66,5 +66,6 @@ default-target = "x86_64-unknown-linux-gnu"
 
 [features]
 default = ["std"]
-std = []
+std = ["alloc"]
+alloc = []
 docs-rs = []
