--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ matrix:
 script:
   - cargo update
   - cargo test --all --no-default-features
-  - cargo test --all --no-default-features --feature=alloc
+  - cargo test --all --no-default-features --features=alloc
   - cargo test --all --all-features
 
 notifications:
