Remove spawn_blocking() function, use nonblocking APIs instead.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,6 +54,7 @@ required-features = ["std"]
 [build-dependencies]
 
 [dev-dependencies]
+async-std = "1.0"
 
 [package.metadata.docs.rs]
 all-features = true
