--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@
 
 [package]
 name = "pasts"
-version = "0.6.0"
+version = "0.7.0"
 authors = ["Jeron Aldaron Lau <jeronlau@plopgrizzly.com>"]
 license = "Apache-2.0/Zlib"
 
@@ -19,7 +19,7 @@ documentation = "https://docs.rs/pasts"
 homepage = "https://github.com/AldaronLau/pasts/blob/master/CHANGELOG.md"
 include = ["Cargo.toml", "README.md", "LICENSE-ZLIB", "LICENSE-APACHE", "src/*"]
 keywords = ["futures", "platform-agnostic", "cross-platform", "io", "executor"]
-categories = ["asynchronous", "embedded", "no-std", "rust-patterns"]
+categories = ["asynchronous", "embedded", "no-std", "rust-patterns", "webassembly"]
 readme = "README.md"
 edition = "2018"
 
