--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,10 +9,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         tc: [stable, beta, nightly]
-        ar:
-        - --all --no-default-features
-        # - --all --no-default-features --features=alloc (unstable)
-        - --all --all-features
+        ar: [--all --no-default-features, --all --all-features]
     steps:
     - uses: actions/checkout@v2
     - uses: actions-rs/toolchain@v1
