--- a/.rustfmt.toml
+++ b/.rustfmt.toml
@@ -1,2 +1,7 @@
+# Don't deviate too much, just reduce columns and extra organization enforcement
+edition = "2021"
+unstable_features = true
 max_width = 80
-use_field_init_shorthand = true
+reorder_impl_items = true
+group_imports = "StdExternalCrate"
+imports_granularity = "Crate"
