--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,13 +21,18 @@ categories = ["asynchronous", "embedded", "no-std", "rust-patterns", "wasm"]
 readme = "README.md"
 edition = "2021"
 
-[dependencies]
-
-[build-dependencies]
+[dependencies.wasm-bindgen-futures]
+version = "0.4"
+optional = true
 
 [dev-dependencies]
-async-std = "1.0"
+async-std = "1.11"
 
 [features]
 default = ["std"]
+
+# Take advantage of the std library for the default executor implementation.
 std = []
+
+# Target the DOM via javascript APIs exposed by wasm-bindgen.
+web = ["wasm-bindgen-futures"]
