--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,15 +2,15 @@
 #
 # Licensed under any of:
 #  - Apache License, Version 2.0 (https://www.apache.org/licenses/LICENSE-2.0)
-#  - MIT License (https://mit-license.org/)
 #  - Boost Software License, Version 1.0 (https://www.boost.org/LICENSE_1_0.txt)
+#  - MIT License (https://mit-license.org/)
 # At your choosing (See accompanying files LICENSE_APACHE_2_0.txt,
 # LICENSE_MIT.txt and LICENSE_BOOST_1_0.txt).
 
 [package]
 name = "pasts"
 version = "0.11.0"
-license = "Apache-2.0 OR MIT OR BSL-1.0"
+license = "Apache-2.0 OR BSL-1.0 OR MIT"
 description = "Minimal and simpler alternative to the futures crate."
 repository = "https://github.com/ardaku/pasts"
 documentation = "https://docs.rs/pasts"
