--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,8 +31,8 @@ version = "0.1"
 optional = true
 
 [dev-dependencies]
-async_main = { version = "0.2", path = "../async_main", features = ["pasts"] }
-# async_main = "0.1"
+# async_main = { version = "0.2", path = "../async_main", features = ["pasts"] }
+async_main = "0.1"
 async-std = "1.11"
 
 [target.'cfg(all(target_arch="wasm32", target_os="unknown"))'.dev-dependencies]
