Fix spawning while blocking not executing in some cases.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@
 
 [package]
 name = "pasts"
-version = "0.13.0"
+version = "0.13.1"
 license = "Apache-2.0 OR BSL-1.0 OR MIT"
 description = "Minimal and simpler alternative to the futures crate."
 repository = "https://github.com/ardaku/pasts"
@@ -33,6 +33,7 @@ optional = true
 [dev-dependencies]
 async_main = { version = "0.2", features = ["pasts"] }
 async-std = "1.11"
+whisk = "0.10"
 
 [target.'cfg(all(target_arch="wasm32", target_os="unknown"))'.dev-dependencies]
 wasm-bindgen = "0.2"
